--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -92,7 +92,7 @@
             <p>Personalized service to help you procure <span>Credit Card!</span></p>
             <p>
               <span>Best credit card offers to match your lifestyle!</span>
-              <a  class="btn btn-custom" href="/home/credit_card">Check Now</a>
+              <a  class="btn btn-custom" href="/home/credit_card">Check Now&nbsp;&nbsp;&nbsp;<span>></span></a>
             </p>
           </li>
         </ul>
@@ -105,7 +105,7 @@
             <p>Get the most reliable assistance to procure <span>Home Loan!</span></p>
             <p>
               <span>Home Loan from Best Banks, Check Eligibility for Pradhanmantri Awaas Yojana.</span>
-              <a class="btn btn-custom" href="/home/home_loan">Check Now</a>
+              <a class="btn btn-custom" href="/home/home_loan">Check Now&nbsp;&nbsp;&nbsp;<span>></span></a>
             </p>
           </li>
         </ul>
