(Fixed) ssl enabled

--- a/app/views/payment_mailer/friancise_application.html.erb
+++ b/app/views/payment_mailer/friancise_application.html.erb
@@ -2,7 +2,7 @@
 <p>Thank you for the francise application.</p>
 <p>Please find an agreement attachment for the francise application.</p>
 <p>For payment please click on below link:</p>
-<p><%= link_to 'Proceed with Payment', "#{root_url[0...-1]}/channel_partner?applicant_id=#{@friancise_application.id}"  %></p>
+<p><%= link_to 'Proceed with Payment', "#{channel_partner_url}?applicant_id=#{@friancise_application.id}"  %></p>
 <br><br>
 <p>Thanks & Regards</p>
 <p>Team Growwcapital</p>
