fixed - minor issues.

--- a/app/views/home/channel_partner.html.erb
+++ b/app/views/home/channel_partner.html.erb
@@ -7,12 +7,12 @@
       <div class="col-md-12 about-us">
         <h2 class="text-center card-title">Unlock Your Business Potential By Becoming Groww Capital’s Channel Partners</h2>
         <p>We’re a one stop finance company serving individuals, i.e. salaried as well as small and mid-size businesses including start-ups  offering opportunities for Channel partners.</p>
-        <p><a href="/">GrowwCapital</a> is licensed representatives of many leading banks and financial institutions for whom we’ve been consistently delivering results. We deal in marketing and selling products like loans, credit cards, insurance etc. In order to grow, we have developed diverse sales channels to penetrate into a wider set of audience.</p>
+        <p><a href="/">GrowwCapital</a> is licensed representatives of many leading banks and financial institutions for whom we’ve been consistently delivering results. We deal in marketing and selling products like loans, credit cards etc. In order to grow, we have developed diverse sales channels to penetrate into a wider set of audience.</p>
         <p class="pl-about">Grow With Us</p>
         <p>If you:</p>
         <p>Have been selling and marketing financing products at an individual capacity.</p>
         <p>Have built your own set of loyal clientele that include individuals and small to mid-sized businesses</p>
-        <p>You help your clients procure various kinds of loans, credit cards, and insurance</p>
+        <p>You help your clients procure various kinds of loans, credit cards</p>
         <p>We invite you to associate with us as Channel Partners to carry out your business operations in a more structured, trusted, and reliable manner. We offer our Channel Partners distinct, measurable benefits and conveniences that will fuel your growth manifold.</p>
         <p class="pl-about">We’re a Structured, Open-minded Professionals</p>
         <p>By becoming our channel partners you associate with an experienced finance company that is ready to invest in your success. We offer you with fast and easy access to information that will help you sell and market the products better and help you earn trust of your clients faster.</p>
