--- a/app/views/home/contact_us.html.erb
+++ b/app/views/home/contact_us.html.erb
@@ -50,9 +50,9 @@
         </div>
         <div class="contact_address">
           <p class="margin-bottom-none">
-            2nd Floor,<br>
-            Gupta Travels Building, <br>
-            Lokmat Square, Nagpur - 440012
+            Growwcapital, <br>
+            Civil Lines Opposite of Mg House, <br>
+            Beside of Nanking's Hotel, Nagpur - 440001
           </p>
         </div>
       </div>
@@ -98,7 +98,7 @@
     <div class="col-md-12 find_map">
       <h2 class="margin-bottom-25 margin-top-none">FIND US ON THE MAP</h2>
       <div class="map margin-vertical-30">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1860.721386436601!2d79.0776456581921!3d21.134770546485324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4c090506a12bb%3A0xd5702dfdeab25841!2sLokmat%20Square%2C%20Ramdaspeth%2C%20Nagpur%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1603249562691!5m2!1sen!2sin" width="600" height="450" frameborder="0" class="contact-us" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1860.5356397067783!2d79.07452265818982!3d21.149561448024688!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4c0f1f1f8c16f%3A0x32cdd0a6735bf65e!2sSita%20Kunj%2C%20Civil%20Lines%2C%20Nagpur%2C%20Maharashtra%20440001!5e0!3m2!1sen!2sin!4v1650868202196!5m2!1sen!2sin" frameborder="0" class="contact-us" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </div>
     </div>
   </div>
