--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -260,17 +260,17 @@
               </div>
             <%end%>
           </div>
-          <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
-            <%= link_to custom_insurance_path, method: :get do %>
+          <!-- <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
+            <%#= link_to custom_insurance_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Insurance</h1>
                 <div class="product-icon">
                 <p class="product-desc">Insurance plans with income friendly premiums & easy claims settlement.</p>
-                  <%= image_tag "icons/insurance-icon.png", class: "insurance-icon" %>
+                  <%#= image_tag "icons/insurance-icon.png", class: "insurance-icon" %>
                 </div>
               </div>
-            <%end%>
-          </div>
+            <%#end%>
+          </div> -->
         </div>
       </section>
       <section class="car-block-wrap padding-loans all-products-mobile pb-feature-section-serve">
@@ -369,14 +369,14 @@
               <span class="pop-city">Gold Loan</span>
             <%end%>
           </div>
-          <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
-            <%= link_to custom_insurance_path, method: :get do %>
+          <!-- <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
+            <%#= link_to custom_insurance_path, method: :get do %>
               <span class="iconHolder">
-                <%= image_tag "icons/insurance-icon.png", class: "insurance-icon" %>
+                <%#= image_tag "icons/insurance-icon.png", class: "insurance-icon" %>
               </span>
               <span class="pop-city">Insurance</span>
-            <%end%>
-          </div>
+            <%#end%>
+          </div> -->
         </div>
       </section>
       <div class="homeStrip">
@@ -391,7 +391,7 @@
             <ul style="padding-left: 60px;">
               <li>Avail of PM Awaas Yojana benefit at the time of applying for home loan or home loan transfer</li>
               <li>Choose the best credit card or procure loans</li>
-              <li>We stand by clients till the closure of transaction, i.e. till the last installment is paid and in case of insurance claims, we provide services till claim is settled.</li>
+              <!-- <li>We stand by clients till the closure of transaction, i.e. till the last installment is paid and in case of insurance claims, we provide services till claim is settled.</li> -->
               <li>We do not charge commission from client for our services</li>
               <li>Never hassle clients to pay any hidden expenses</li>
             </ul>
@@ -427,14 +427,14 @@
                 <div class="col-sm-6">
                   <div class="pb-feature">
                       <%= image_tag "grc-credible.svg", alt: "grc-credible" %>
-                      <h3>Unbiased advisor of Loan and Insurance</h3>
+                      <h3>Unbiased advisor of Loan</h3>
                       <p><br><br></p>
                   </div>
                 </div>
                 <div class="col-sm-6">
                   <div class="pb-feature">
                       <%= image_tag "grc-trustworthy.svg", alt: "grc-trustworthy" %>
-                      <h3>Best deals in Loan, Credit cards & Insurance</h3>
+                      <h3>Best deals in Credit cards</h3>
                       <p><br><br></p>
                   </div>
                 </div>
