--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,7 +83,7 @@
                         <li><%= link_to "New Car Loan", custom_new_car_loan_path, method: :get %></li>
                         <li><%= link_to "Used Car Loan", custom_used_car_loan_path, method: :get %></li>
                         <li><%= link_to "Gold Loan", custom_gold_loan_path, method: :get %></li>
-                        <li><%= link_to "Insurance", custom_insurance_path, method: :get %></li>
+                        <!-- <li><%#= link_to "Insurance", custom_insurance_path, method: :get %></li> -->
                       </ul>
                   </li>
                   <li class="<%#= active_tab('pre_approved') %>">
@@ -166,7 +166,7 @@
                       <li><%= link_to "New Car Loan", custom_new_car_loan_path, method: :get %></li>
                       <li><%= link_to "Used Car Loan", custom_used_car_loan_path, method: :get %></li>
                       <li><%= link_to "Gold Loan", custom_gold_loan_path, method: :get %></li>
-                      <li><%= link_to "Insurance", custom_insurance_path, method: :get %></li>
+                      <!-- <li><%#= link_to "Insurance", custom_insurance_path, method: :get %></li> -->
                     </ul>
                   </li>
                   <li class="<%= active_tab('pre_approved') %>">
@@ -229,7 +229,7 @@
             <h4>Contact us</h4>
             <div class="footer-contact">
               <ul>
-                <li><i class="fa fa-map-marker"></i> <strong>Address:</strong> 2nd Floor, Gupta Travels Building, Lokmat Square, Nagpur - 440012</li>
+                <li><i class="fa fa-map-marker"></i> <strong>Address:</strong> Growwcapital, Civil Lines Opposite of Mg House, Beside of Nanking's Hotel, Nagpur - 440001</li>
                 <li><i class="fa fa-phone"></i> <strong>Phone:</strong><a href="tel:+918806644344">+91-88066-44344</a></li>
                 <li><i class="fa fa-envelope-o"></i> <strong>Email:</strong><a href="mailto:support@growwcapital.com">support@growwcapital.com</a></li>
               </ul>
@@ -246,7 +246,7 @@
             <h4>Terms and Policy</h4>
             <ul style="list-style: none; padding: 0px;">
               <li><a href="/terms_and_conditions">Terms and Conditions</a></li>
-              <li><a href="/privacy_policy">Privacy Poliy</a></li>
+              <li><a href="/privacy_policy">Privacy Policy</a></li>
             </ul>
           </div>
         </div>
@@ -272,13 +272,12 @@
           </div>
           <div class="col-lg-8 col-md-6 col-sm-6 col-xs-12 social-media-icons">
             <ul class="social margin-bottom-25 md-margin-bottom-25 sm-margin-bottom-20 xs-margin-bottom-20 xs-padding-top-10 clearfix">
-              <li><a class="sc-1" style="display: none;" href="javascript:void(0)"></a></li>
-              <li><a class="sc-1" href="#"></a></li>
-              <li><a class="sc-2" href="#"></a></li>
-              <li><a class="sc-3" href="#"></a></li>
-              <li><a class="sc-5" href="#"></a></li>
-              <li><a class="sc-9" href="#"></a></li>
-              <li><a class="sc-11" href="#"></a></li>
+              <li><a class="sc-1" href="https://www.facebook.com/growwcapital" target="_blank"></a></li>
+              <li><a class="sc-2" href="https://twitter.com/growwcapital2" target="_blank"></a></li>
+              <!-- <li><a class="sc-3" href="#"></a></li> -->
+              <li><a class="sc-5" href="https://www.linkedin.com/in/groww-capital-375896238/" target="_blank"></a></li>
+              <!-- <li><a class="sc-9" href="#"></a></li> -->
+              <li><a class="sc-11" href="https://www.instagram.com/growwcapital_1/" target="_blank"></a></li>
             </ul>
           </div>
         </div>
