--- a/app/views/home/inssurance.html.erb
+++ b/app/views/home/inssurance.html.erb
@@ -1,4 +1,4 @@
-<section>
+<!-- <section>
   <div class="container  custom-container">
     <div class="row">
       <div class="col-md-12">
@@ -11,34 +11,34 @@
   <div class="row">
     <div class="col-md-6">
       <p>Please provide following details for the application</p>
-      <%= form_for @inssurance, :url => { :action => "inssurance" }, remote: false, html: { class: "custom_credit_card" } do |f| %>
+      <%#= form_for @inssurance, :url => { :action => "inssurance" }, remote: false, html: { class: "custom_credit_card" } do |f| %>
           <div class="row">
             <div class="col-md-12">
               <label>Your Full Name</label>
-              <%= f.text_field(:full_name, class: "form-control", autofocus: "true") %>
+              <%#= f.text_field(:full_name, class: "form-control", autofocus: "true") %>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12">
               <label>Your Mobile Number</label>
-              <%= f.number_field(:mobile_number, class: "form-control") %>
+              <%#= f.number_field(:mobile_number, class: "form-control") %>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12">
               <label>Your Email</label>
-              <%= f.text_field(:email, class: "form-control") %>
+              <%#= f.text_field(:email, class: "form-control") %>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12">
               <label>Chose Product</label>
-              <%= f.select(:loan_purpose, @inssurance.loan_reasons, class: "form-control") %>
+              <%#= f.select(:loan_purpose, @inssurance.loan_reasons, class: "form-control") %>
             </div>
           </div>
           <button type="submit" class="btn btn-custom btn-block">Submit</button>
           <br>
-      <%end%>
+      <%#end%>
     </div>
     <div class="col-md-6">
       <h4 class="crd-heading">
@@ -97,43 +97,43 @@
   <div class="row">
     <div class="col-md-12">
       <div class="other-services">
-        <%= link_to custom_personal_loan_path, method: :get do %>
-          <%= image_tag "icons/personal-loan-icon.svg", style: "width: 25px;" %>&nbsp;
+        <%#= link_to custom_personal_loan_path, method: :get do %>
+          <%#= image_tag "icons/personal-loan-icon.svg", style: "width: 25px;" %>&nbsp;
           Personal Loan
-        <%end%>
-        <%= link_to custom_transfer_personal_loan_path, method: :get do %>
-          <%= image_tag "icons/transfer-personal-loan-icon.svg", style: "width: 25px;" %>&nbsp;
+        <%#end%>
+        <%#= link_to custom_transfer_personal_loan_path, method: :get do %>
+          <%#= image_tag "icons/transfer-personal-loan-icon.svg", style: "width: 25px;" %>&nbsp;
           Transfer Personal Loan
-        <%end%>
-        <%= link_to custom_business_loan_path, method: :get do %>
-          <%= image_tag "icons/business-loan-icon.svg", style: "width: 25px;" %>&nbsp;
+        <%#end%>
+        <%#= link_to custom_business_loan_path, method: :get do %>
+          <%#= image_tag "icons/business-loan-icon.svg", style: "width: 25px;" %>&nbsp;
           Business Loan
-        <%end%>
-        <%= link_to custom_professional_loan_path, method: :get do %>
-          <%= image_tag "icons/professional-loan-icon.svg", style: "width: 25px;" %>&nbsp;
+        <%#end%>
+        <%#= link_to custom_professional_loan_path, method: :get do %>
+          <%#= image_tag "icons/professional-loan-icon.svg", style: "width: 25px;" %>&nbsp;
           Professional Loan
-        <%end%>
-        <%= link_to custom_home_loan_path, method: :get do %>
-          <%= image_tag "icons/home-loan-icon.svg", style: "width: 25px;" %>&nbsp;
+        <%#end%>
+        <%#= link_to custom_home_loan_path, method: :get do %>
+          <%#= image_tag "icons/home-loan-icon.svg", style: "width: 25px;" %>&nbsp;
           Home Loan
-        <%end%>
+        <%#end%>
         <br><br><br>
-        <%= link_to custom_transfer_home_loan_path, method: :get do %>
-          <%= image_tag "icons/tr-home-loan-icon.svg", style: "width: 25px;" %>&nbsp;
+        <%#= link_to custom_transfer_home_loan_path, method: :get do %>
+          <%#= image_tag "icons/tr-home-loan-icon.svg", style: "width: 25px;" %>&nbsp;
           Transfer Home Loan
-        <%end%>
-        <%= link_to custom_loan_against_property_path, method: :get do %>
-          <%= image_tag "icons/loan-against-property-icon.svg", style: "width: 25px;" %>&nbsp;
+        <%#end%>
+        <%#= link_to custom_loan_against_property_path, method: :get do %>
+          <%#= image_tag "icons/loan-against-property-icon.svg", style: "width: 25px;" %>&nbsp;
           Loan Against Property
-        <%end%>
-        <%= link_to custom_new_car_loan_path, method: :get do %>
-          <%= image_tag "icons/new-car-loan-icon.svg", style: "width: 25px;" %>&nbsp;
+        <%#end%>
+        <%#= link_to custom_new_car_loan_path, method: :get do %>
+          <%#= image_tag "icons/new-car-loan-icon.svg", style: "width: 25px;" %>&nbsp;
           New Car Loan
-        <%end%>
-        <%= link_to custom_used_car_loan_path, method: :get do %>
-          <%= image_tag "icons/used-car-loan-icon.svg", style: "width: 25px;" %>&nbsp;
+        <%#end%>
+        <%#= link_to custom_used_car_loan_path, method: :get do %>
+          <%#= image_tag "icons/used-car-loan-icon.svg", style: "width: 25px;" %>&nbsp;
           Used Car Loan
-        <%end%>
+        <%#end%>
       </div>
     </div>
   </div>
@@ -165,4 +165,4 @@
       }
     });
   });
-</script>
+</script> -->
