google analytics script added.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="author" content="">
     <meta name="description" content="<%= @description %>">
-    <meta name="keywords" content="<%=  %>">    
+    <meta name="keywords" content="<%=  %>">
+    <meta name="google-site-verification" content="vluZCVNoRTrhS0n-KvdHFdGkSzJnq1wIS1zWyIOq9h0" />
     <%= favicon_link_tag asset_path('logo.ico'), :rel => 'icon', :type => "image/x-icon" %>
     <title>GrowwCapital <%= "| #{@title}" if @title %></title>
     <%= csrf_meta_tags %>
@@ -15,6 +16,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;400&display=swap" rel="stylesheet">
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag params[:controller], 'data-turbolinks-track': 'reload' %>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PR8TLH04L2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-PR8TLH04L2');
+    </script>
   </head>
   <body>
     <div class="new-loading">Loading&#8230;</div>
