calling number added.

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -1404,8 +1404,8 @@ homeStrip .container>p {
   .bar {
     font-size: 25px;
   }
-  .fa-envelope {
-    color: #cb2d08;
+  .fa-phone {
+    color: #444e44;
   }
   .fa-money {
     color: #1dab2d;
