--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,8 +43,8 @@
                   <span class="bar"> | </span>
                 </span>
                 <span>
-                  <i class="fa fa-envelope"></i>&nbsp;
-                  <a href="mailto:support@growwcapital.com">support@growwcapital.com</a>
+                  <i class="fa fa-phone"></i>&nbsp;
+                  <a href="tel:+919112345687">+91-91123-45687</a>
                 </span>
                  <span class="bar"> | </span>
                 <span>
