mobile number change.

--- a/app/views/credit_card/step6.html.erb
+++ b/app/views/credit_card/step6.html.erb
@@ -23,11 +23,11 @@
           Your application has been <b>Successfully Submitted.</b> Our loan expert will get back to you with in <b>24 hours</b> to take this application forward.
         </p>
         <p>
-          <a href="/" target="_blank">Growwcapital.com</a> doesn't charge any money from customers for it's loan or credit card offerings. In such case you receive such communication from anyone claiming to be a Growwcapital representative, please contact us to 
+          <a href="/" target="_blank">GrowwCapital.com</a> doesn't charge any money from customers for it's loan or credit card offerings. In such case you receive such communication from anyone claiming to be a GrowwCapital representative, please contact us to 
           <a href = "mailto:support@growwcapital.com">support@growwcapital.com</a>.
         </p>
         <p>
-          Thank you for choosing Growwcapital!!!
+          Thank you for choosing GrowwCapital!!!
         </p>        
       </div>
       <div class="contact-info">
@@ -35,7 +35,7 @@
           <span class="fa fa-volume-control-phone" aria-hidden="true"></span>
           <p>
             Tollfree<br>
-            +91-88066-44344
+            +91-91123-45687
           </p>
         </div>
         <div class="div2">
