--- a/app/views/home/business_loan.html.erb
+++ b/app/views/home/business_loan.html.erb
@@ -44,7 +44,7 @@
     <div class="col-md-6">
       <h4 class="crd-heading">
         <br><br>
-        <span>The easiest way to procure a Business loan is to fill this form and get in touch with us.</span><br><br>Our Relationship Manager will call back in less than 24 hours. If you want to talk to us, call us on <a href="tel:+918806644344">+91-88066-44344</a>.
+        <span>The easiest way to procure a Business loan is to fill this form and get in touch with us.</span><br><br>Our Relationship Manager will call back in less than 24 hours. If you want to talk to us, call us on <a href="tel:+919112345687">+91-91123-45687</a>.
       </h4>
     </div>
   </div>
@@ -124,11 +124,11 @@
       </ul>
       <p class="pl-ser"><strong>What about fees & other charges to get personal loan?</strong></p>
       <p>It varies depending on several factors and also from bank to bank. It generally has to do with the loan amount, interest rate & repayment period.</p>
-      <p class="pl-ser"><strong>How to Apply for Business from <a href="/">Growwcapital</a></strong></p>
+      <p class="pl-ser"><strong>How to Apply for Business from <a href="/">GrowwCapital</a></strong></p>
       <p>Follow the mentioned steps:</p>
       <ul>
         <li>Fill and submit the form given above. We ask you to furnish basic details.</li>
-        <li>You’ll receive a call back from <a href="/">Growwcapital</a> within 24 hours</li>
+        <li>You’ll receive a call back from <a href="/">GrowwCapital</a> within 24 hours</li>
         <li>You can get all the information and answers from the caller with regard to which loan would best serve you’re propose, special offers currently available, loans available for farmers, women etc.</li>
         <li>We visit your office or residence on a pre-appointed and mutually convenient time to complete all the paper work and fill and submit the form online in front of you.</li>
         <li>We can also guide you over phone or video chat to fill your own form online from your own device.</li>
@@ -163,7 +163,7 @@
       <p>No, no need to submit any collateral to the bank or NBFC, for few specific secured business loans, collateral is required. We have discussed this issue in the beginning.</p>
       <p class="pl-ser"><strong>Are there pre closure and part-prepayment charges?</strong></p>
       <p>Yes. The pre-closure & part-payment charges are different from bank to bank. While some banks may not charge anything, in some banks it may exceed up to 4%-5% of the loan amount.</p>
-      <p>We’re here to answer all your questions and more. Give us a call on <a href="tel:+918806644344">+91-88066-44344</a></p>
+      <p>We’re here to answer all your questions and more. Give us a call on <a href="tel:+919112345687">+91-91123-45687</a></p>
       <p class="pl-ser"><strong>Checkout our other services:</strong></p><br>
     </div>
   </div>
