--- a/app/views/home/pre_approved_status.html.erb
+++ b/app/views/home/pre_approved_status.html.erb
@@ -13,7 +13,7 @@
             <% if @pre_approved_offer %>
               <p>Congratulations!!! You are eligible for pre approved offers. Please upload your documents on the link which is provided in the sms.</p>
             <% else %>
-              <p>Sorry!!! You are new for growwcapital. Please apply with new application.
+              <p>Sorry!!! You are new for GrowwCapital. Please apply with new application.
                 <%= link_to personal_loan_path('step1'), method: :get do %>
                   <b><i>Apply</i></b>
                 <%end%>
@@ -35,11 +35,11 @@
               <br>
             <% end %>
             <p>
-              <a href="http://growwcapital.com/" target="_blank">Growwcapital.com</a> doesn't charge any money from customers for it's loan or credit card offerings. In such case you receive such communication from anyone claiming to be a Growwcapital representative, please contact us to 
+              <a href="http://growwcapital.com/" target="_blank">GrowwCapital.com</a> doesn't charge any money from customers for it's loan or credit card offerings. In such case you receive such communication from anyone claiming to be a GrowwCapital representative, please contact us to 
               <a href="mailto:support@growwcapital.com">support@growwcapital.com</a>.
             </p>
             <p>
-              Thank you for choosing Growwcapital!!!
+              Thank you for choosing GrowwCapital!!!
             </p>        
           </div>
           <div class="contact-info">
@@ -47,7 +47,7 @@
               <span class="fa fa-volume-control-phone" aria-hidden="true"></span>
               <p>
                 Tollfree<br>
-                <a href="tel:+918806644344">+91-88066-44344</a>
+                <a href="tel:+919112345687">+91-91123-45687</a>
               </p>
             </div>
             <div class="div2">
