--- a/app/views/home/privacy_policy.html.erb
+++ b/app/views/home/privacy_policy.html.erb
@@ -49,8 +49,8 @@
         <p>For any query or complaint regarding confidentiality and sharing of your Customer Data, including sharing with third parties, or suggestion for improvement of this policy, you may contact </p>
         <p class="pl-about">Contact Person</p>
         <p>Mr. Rahul Vairagade</p>
-        <p><a href="tel:+918806644344">+91-88066-44344</a></p>
-        <p>2nd Floor, Gupta Travels Building, Lokmat Square, Nagpur - 440012</p>
+        <p><a href="tel:+919112345687">+91-91123-45687</a></p>
+        <p>GrowwCapital, Civil Lines Opposite of Mg House, Beside of Nanking's Hotel, Nagpur - 440001</p>
     </div>
     <div class="col-md-2"></div>
   </div>
