--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,11 +46,6 @@
                   <i class="fa fa-phone"></i>&nbsp;
                   <a href="tel:+919112345687">+91-91123-45687</a>
                 </span>
-                 <span class="bar"> | </span>
-                <span>
-                  <i class="fa fa-whatsapp"></i>&nbsp;
-                  <a href="tel:+918806644344">+91-88066-44344</a>  
-                </span>
               </p>
             </div>
           </div>
@@ -239,8 +234,8 @@
             <h4>Contact us</h4>
             <div class="footer-contact">
               <ul>
-                <li><i class="fa fa-map-marker"></i> <strong>Address:</strong> Growwcapital, Civil Lines Opposite of Mg House, Beside of Nanking's Hotel, Nagpur - 440001</li>
-                <li><i class="fa fa-phone"></i> <strong>Phone:</strong><a href="tel:+918806644344">+91-88066-44344</a></li>
+                <li><i class="fa fa-map-marker"></i> <strong>Address:</strong> GrowwCapital, Civil Lines Opposite of Mg House, Beside of Nanking's Hotel, Nagpur - 440001</li>
+                <li><i class="fa fa-phone"></i> <strong>Phone:</strong><a href="tel:+919112345687">+91-91123-45687</a></li>
                 <li><i class="fa fa-envelope-o"></i> <strong>Email:</strong><a href="mailto:support@growwcapital.com">support@growwcapital.com</a></li>
               </ul>
             </div>
