--- a/app/views/loan_mailer/instant_application.html.erb
+++ b/app/views/loan_mailer/instant_application.html.erb
@@ -7,4 +7,4 @@
 <p>Loan/Caredit Card Purpose: <%= @loan_purpose %></p>
 <br><br>
 <p>Thanks & Regards</p>
-<p>Team Growwcapital</p>
+<p>Team GrowwCapital</p>
