--- a/app/views/loan_mailer/instant_call.html.erb
+++ b/app/views/loan_mailer/instant_call.html.erb
@@ -5,4 +5,4 @@
 <p>Product Name: <%= @instant_call.product_name.humanize %></p>
 <br><br>
 <p>Thanks & Regards</p>
-<p>Team Growwcapital</p>
+<p>Team GrowwCapital</p>
