--- a/app/views/loan_mailer/refer_earn_admin.html.erb
+++ b/app/views/loan_mailer/refer_earn_admin.html.erb
@@ -8,4 +8,4 @@
 <p>Reference Number: <%= @refer_earn.reference_number %></p>
 <br><br>
 <p>Thanks & Regards</p>
-<p>Team Growwcapital</p>
+<p>Team GrowwCapital</p>
