--- a/app/views/loan_mailer/refer_earn_customer.html.erb
+++ b/app/views/loan_mailer/refer_earn_customer.html.erb
@@ -3,4 +3,4 @@
 <p>Here is your reference number: <%= @refer_earn.reference_number %></p>
 <br><br>
 <p>Thanks & Regards</p>
-<p>Team Growwcapital</p>
+<p>Team GrowwCapital</p>
