--- a/app/views/payment/create_channel_partner_order.js.erb
+++ b/app/views/payment/create_channel_partner_order.js.erb
@@ -7,7 +7,7 @@
       "amount": '<%= @order.attributes['amount'] %>',
       "currency": "INR",
       "name": "Growwcapital",
-      "description": "Growwcapital Franchise",
+      "description": "GrowwCapital Franchise",
       "image": "https://growwcapital.com/assets/logo.png",
       "order_id": '<%= @order.attributes['id'] %>',
       "handler": function (response){
