--- a/app/views/payment_mailer/friancise_application.html.erb
+++ b/app/views/payment_mailer/friancise_application.html.erb
@@ -5,4 +5,4 @@
 <p><%= link_to 'Proceed with Payment', "#{channel_partner_url}?applicant_id=#{@friancise_application.id}"  %></p>
 <br><br>
 <p>Thanks & Regards</p>
-<p>Team Growwcapital</p>
+<p>Team GrowwCapital</p>
