--- a/app/views/home/about_us.html.erb
+++ b/app/views/home/about_us.html.erb
@@ -5,7 +5,7 @@
     <div class="row align-items-end">
       <div class="col-md-12 about-us">
         <p class="pl-about">Who we are</p>
-        <p><a href="/">GrowwCapital</a> is a Nagpur based Financial Consultancy firm on way to building a strong foundation & network by offering personalized service to those seeking any type of Loans, Credit Cards. We not only help clients in securing loan, we do it without charging them anything, we stand by them for any help till the last installment is paid.</p>
+        <p><a href="/">GrowwCapital</a> is a Nagpur based Financial Service firm on way to building a strong foundation & network by offering personalized service to those seeking any type of Loans, Credit Cards. We not only help clients in securing loan, we do it without charging them anything, we stand by them for any help till the last installment is paid.</p>
         <p>Having been into this field for over 8 years, we’ve witnessed market growing, faltering, and getting back on its feet on several occasions. The experience has deepened our insight and we thus combine our experience of working with the best banks and financial institutions with passion for financial services to help clients meet their business and personal goals.</p>
         <p class="pl-about">Our clients</p>
         <p>Our clients profile is large and wide. From the First Time home loan and credit card seekers to those seeking to improve their credit score, transfer home loan from one bank to another;</p>
