--- a/app/views/application_mailer/contact_us.html.erb
+++ b/app/views/application_mailer/contact_us.html.erb
@@ -1,5 +1,5 @@
 <p>Dear Admin,</p>
-<p>Mr/ Mrs. <%= "#{@contact.first_name} #{@contact.last_name}" %> caontact you.</p>
+<p>Mr/ Mrs. <%= "#{@contact.first_name} #{@contact.last_name}" %> contact you.</p>
 <p><b>Email</b></p>
 <p><%= "#{@contact.email}" %></p>
 <p><b>Subject</b></p>
