--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -325,7 +325,7 @@
               <div class="row">
                 <div class="col-md-12">
                   <label>Products</label>
-                  <%= f.select(:product_name, f.object.products, class: "form-control") %>
+                  <%= f.select(:product_name, f.object.loan_types, class: "form-control") %>
                 </div>
               </div>
               <div class="form-group">
@@ -368,7 +368,7 @@
               <div class="row">
                 <div class="col-md-12">
                   <label>Products</label>
-                  <%= f.select(:product_name, f.object.products, class: "form-control") %>
+                  <%= f.select(:product_name, f.object.loan_types, class: "form-control") %>
                 </div>
               </div>
               <div class="row">
