--- a/app/views/layouts/personal_admin.html.erb
+++ b/app/views/layouts/personal_admin.html.erb
@@ -11,10 +11,10 @@
     <title>GrowwCapital <%= "| #{@title}" if @title %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'personal_admin', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag params[:controller], media: 'all', 'data-turbolinks-track': 'reload' %>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;400&display=swap" rel="stylesheet">
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'personal_admin', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag params[:controller], 'data-turbolinks-track': 'reload' %>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-PR8TLH04L2"></script>
@@ -30,6 +30,34 @@
     <header data-spy="affix" data-offset-top="1" class="clearfix">
       <%= render "layouts/flash_messages" %>
     </header>
-    <%= yield %>
+    <div class="sales-manager-menu d-flex flex-column flex-shrink-0 p-3 text-white bg-dark">
+      <a href="/sales-manager" class="heading d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+        <%= image_tag "logo.png", alt: "logo", class: "main-logo" %>
+        <span class="fs-4">Sales Manager</span>
+      </a>
+      <hr>
+      <ul class="nav nav-pills flex-column mb-auto">
+        <li class="nav-item">
+          <a href="/disbursements" class="nav-link active" aria-current="page">
+            <i class="fa fa-exchange" aria-hidden="true"></i>&nbsp;&nbsp;Disbursements
+          </a>
+        </li>
+      </ul>
+      <hr>
+      <div class="sales-manager-profile">
+        <%= link_to '/home/profile' do %>
+          <%if current_user.profile_image.attachment.blank? %>
+            <%= image_tag "default-img.jpg", class: "default-img rounded-circle me-2", alt: "", width: "40", height: "40" %>
+          <%else%>
+            <%= image_tag "#{url_for(current_user.profile_image)}", class: 'rounded-circle me-2', alt: "", width: "40", height: "40" %>
+          <%end%>
+        <%end%>
+        <span><%= current_user.full_name %></span>
+        <%= link_to "Log Out", destroy_user_session_path, class: 'logout' %>
+      </div>
+    </div>
+    <div class="personal_admin_body">
+      <%= yield %>
+    </div>
   </body>
 </html>
