sales manager feature implemented.

--- a/app/views/layouts/personal_admin.html.erb
+++ b/app/views/layouts/personal_admin.html.erb
@@ -38,7 +38,7 @@
       <hr>
       <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item">
-          <a href="/disbursements" class="nav-link active" aria-current="page">
+          <a href="/sales-manager/disbursements" class="nav-link active" aria-current="page">
             <i class="fa fa-exchange" aria-hidden="true"></i>&nbsp;&nbsp;Disbursements
           </a>
         </li>
