--- a/app/assets/stylesheets/personal_admin.scss
+++ b/app/assets/stylesheets/personal_admin.scss
@@ -11,6 +11,54 @@ body, html {
   .field_with_errors {
     display: inline;
   }
+
+  .digg_pagination {
+    background: white;
+    cursor: default;
+    /* self-clearing method: */ }
+    .digg_pagination a, .digg_pagination span, .digg_pagination em {
+      padding: 0.2em 0.5em;
+      display: block;
+      float: left;
+      margin-right: 1px; }
+    .digg_pagination .disabled {
+      color: #999999;
+      border: 1px solid #dddddd; }
+    .digg_pagination .current {
+      font-style: normal;
+      font-weight: bold;
+      background: #17a2b8;
+      color: white;
+      border: 1px solid #17a2b8; }
+    .digg_pagination a {
+      text-decoration: none;
+      color: #105cb6;
+      border: 1px solid #9aafe5; }
+      .digg_pagination a:hover, .digg_pagination a:focus {
+        color: #000033;
+        border-color: #000033; }
+    .digg_pagination .page_info {
+      background: #17a2b8;
+      color: white;
+      padding: 0.4em 0.6em;
+      width: 22em;
+      margin-bottom: 0.3em;
+      text-align: center; }
+      .digg_pagination .page_info b {
+        color: #000033;
+        background: #6aa6ed;
+        padding: 0.1em 0.25em; }
+    .digg_pagination:after {
+      content: ".";
+      display: block;
+      height: 0;
+      clear: both;
+      visibility: hidden; }
+    * html .digg_pagination {
+      height: 1%; }
+    *:first-child + html .digg_pagination {
+      overflow: hidden;
+  }
 }
 
 .personal_admin_body {
@@ -21,6 +69,17 @@ body, html {
     font-size: 35px;
     font-weight: 600;
     margin-top: 14px;
+    .search {
+      display: inline;
+      width: 80%;
+    }
+
+    button {
+      top: 14px;
+      position: absolute;
+      float: right;
+      right: 124px;
+    }
   }
   .row-heading {
     padding-bottom: 15px;
